# storyteller

./: .devcontainer.json  .dockerignore  .easignore  .envrc  .eslintignore  .eslintrc.cjs  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.server  Dockerfile.web  LICENSE  README.md  TODO.md  compose.yaml  eas.json  eslint.config.js  flake.nix  lint-staged.config.js  package.json  pyproject.toml  schema.sql  tsconfig.json
.config/dotfiles/: Brewfile  install  macos  setup
.config/emacs/: early-init.el  init.el
.config/fish/: aliases.fish  config.fish  env.fish  fish_variables  macos.fish
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/ci/: base-images.yml  bump-versions.yml  check.yml  publish-mobile.yml  publish-packages.yml  publish-web.yml  whisper-build.yml
.gitlab/issue_templates/: Default.md  Feature Request.md
.gitlab/merge_request_templates/: Default.md
.gnupg/: gpg-agent.conf
.husky/: post-checkout  post-commit  post-merge  pre-push
.yarn/patches/: @auth-core-npm-0.39.1-f602231038.patch  @dword-design-eslint-plugin-import-alias-npm-5.1.2-1b47891395.patch  @react-native-reusables-cli-npm-0.5.2-408f1c8116.patch  expo-file-system-npm-19.0.11-1b623c597e.patch  expo-file-system-npm-19.0.17-cda362f0b1.patch  expo-file-system-npm-19.0.19-800f9ff305.patch  (+9 more)
align/: .eslintrc.cjs  .gitignore  LICENSE.txt  README.md  binding.gyp  package.json  tsconfig.json  tsup.config.ts
align/src/: index.ts
audiobook/: .eslintrc.cjs  .gitignore  README.md  package.json  readme-stub.md  tsconfig.json  tsup.config.ts  typedoc.json
docker/: api.Dockerfile  api.Dockerfile.dockerignore  web.Dockerfile
docker-scripts/: entrypoint.sh  reset-password.sh
docs/: .eslintrc.cjs  .gitignore  docusaurus.config.js  package.json  sidebars.js  sidebarsContributing.js  tsconfig.json
epub/: .eslintrc.cjs  .gitignore  README.md  index.test.ts  index.ts  node.ts  package.json  path-dirname.d.ts  readme-stub.md  tsconfig.json  tsup.config.ts  typedoc.json
fs/: .gitignore  .swcrc  .swcrc-cjs  README.md  index.ts  package.json  tsconfig.json
ghost-story/: .eslintrc.cjs  .local.gitignore  LICENSE.md  README.md  package.json  tsconfig.json  tsup.config.ts
migrations/: 05_add_audio_filetype_to_book.sql  06_add_user_management_to_user_permission.sql  07_add_invite.sql  08_reverse_user_permission_dir.sql  11_insert_initial_settings.sql  12_add_book_delete_to_user_permission.sql  15_add_token_revokation.sql
mobile/: .eslintrc.cjs  .gitignore  .prettierignore  apiClient.ts  app.config.ts  babel.config.js  colors.ts  debounce.ts  deepEquals.ts  design.ts  eas.json  exists.ts  formatting.ts  global.css  globals.d.ts  links.ts  logger.ts  metro.config.js  package.json  store.config.json  tailwind.config.js  throttle.ts  tsconfig.json  urls.ts  uuid.ts
path/: .gitignore  LICENSE.txt  README.md  index.ts  package.json  tsconfig.json  tsup.config.ts
scripts/: check-versions.sh  check.sh  dev.sh  dump-schema.sh  fix.sh  if-no-version-change.sh  if-version-change.sh  install-cuda.sh  install-node.sh  publish-cuda.sh  testw.sh  whisper-server-config.patch  whisper-utf8-json-fix.patch
storyteller/: __main__.py  audio.py  epub.py  indexing.py  prompt.py  text.py  whisperaudio.py
tests/: test_storyteller.py
web/: .dockerignore  .env.development  .eslintrc.cjs  .gitignore  .kysely-codegenrc.json  .pnp.cjs  .yarnrc.yml  apiClient.ts  assets.ts  audio.ts  auth.ts  authedApiClient.ts  build-sqlite-ext.sh  cldr-segmentation.d.ts  components.json  cookies.ts  directories.ts  epub.ts  events.ts  find_nearest_match.py  fs.ts  install-readium-cli.sh  invites.ts  middleware.ts  next.config.js  package.json  postcss.config.js  pymport-swallow-unthrowable.patch  pymport.d.ts  start.sh  streamTest.ts  tailwind.config.js  transcribe.py  transcribe.ts  tsconfig.json  uuid.ts
writeum/: index.ts  package.json  tsconfig.json
(+1421 files in other folders)
