[tool.poetry]
name = "storyteller"
version = "0.1.0"
description = ""
authors = ["smoores <smoores-gpg@friedmans.us>"]

[tool.poetry.dependencies]
python = "~3.10"

SpeechRecognition = "^3.8.1"
beautifulsoup4 = "^4.9.3"
nltk = "^3.6.2"
ebooklib = "^0.18"
contractions = "^0.1.73"
marisa-trie = "^0.8.0"
whisperx = { git = "https://github.com/m-bain/whisperx.git", rev = "befe2b2" }
mutagen = "^1.46.0"
torch = { version = "^2.0.0", source = "pytorch" }
fuzzysearch = "^0.7.3"
torchaudio = { version = "2.0.1", source = "pytorch" }
pyannote-audio = { git = "https://github.com/pyannote/pyannote-audio", rev = "11b56a137a578db9335efc00298f6ec1932e6317" }
thefuzz = "^0.19.0"
python-levenshtein = "^0.21.0"
uvicorn = "^0.22.0"
transformers = "4.29.2"
ffmpeg-python = "0.2.0"
faster-whisper = "0.6.0"
llvmlite = ">=0.40.0"
numba = ">=0.57.0"                                                                                                        # Pick a real vesrion
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
pylint = "^2.8.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
