[tool.poetry]
name = "storyteller"
version = "0.1.0"
description = ""
authors = ["smoores <smoores-gpg@friedmans.us>"]

[tool.poetry.dependencies]
python = "~3.12"

SpeechRecognition = "^3.8.1"
beautifulsoup4 = "^4.9.3"
nltk = "^3.6.2"
ebooklib = "^0.18"
contractions = "^0.1.73"
mutagen = "^1.46.0"
torch = { version = "2.2.1", source = "pytorch" }
fuzzysearch = "^0.7.3"
torchaudio = { version = "2.2.1", source = "pytorch" }
thefuzz = "^0.19.0"
uvicorn = "^0.22.0"
transformers = "4.39.2"
ffmpeg-python = "0.2.0"
llvmlite = ">=0.40.0"
numba = ">=0.57.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.2"
fastapi = "^0.109.0"
python-multipart = "^0.0.6"
sqlite-uuid = "^0.9.1"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^23.3.0"
pylint = "^2.8.2"
pytest-watch = "^4.2.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pytest.ini_options]
filterwarnings = ["ignore"]

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
